goodsDetail.jsp 레이아웃 및 이미지 추가
<성수의 자료 추가>

--- a/team4_project/src/main/webapp/resources/index.html
+++ b/team4_project/src/main/webapp/resources/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="dest/css/styles.css" />
-    <link rel="stylesheet" href="dest/css/dropdown.css"/>
+    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="css/dropdown.css"/>
     <title>kurly</title>
-    <link rel="shortcut icon" href="kurly_mark.png" />
+    <link rel="shortcut icon" href="images/kurly_mark.png" />
   <body>
     <header>
       <div class="list_menu">
@@ -23,7 +23,7 @@
         </div>
       </div>
       <div class="bottom">
-        <img src="kurly.jpeg" alt="logo" />
+        <img src="images/kurly.jpeg" alt="logo" />
       </div>
     </header>
     <nav>
@@ -49,18 +49,18 @@
           </form>
         </div>
         <div>
-          <img src="location.png" alt="”package" GPS” />
+          <img src="images/location.png" alt="”package" GPS” />
         </div>
         <div class="cart">
           <a href="#" class="cart" aria-label="Go to cart">
-            <img src="cart.png" alt="”장바구니”"
+            <img src="images/cart.png" alt="”장바구니”"
           /></a>
         </div>
       </div>
     </nav>
      <main>
        <div class="section_view">
-         <img id="section_img" src="cheese.png">
+         <img id="section_img" src="images/cheese.png">
          <div id="section_info">
           <div class="goods_name">
             <strong class="name">[푸글리제]모짜렐라</strong><br>
@@ -169,7 +169,7 @@
           <div class="goods_wrap">
             <div class="goods_intro">
               <div class="goods_intro_pic">
-                <img src="cheese2.png" alt="cheese">
+                <img src="images/cheese2.png" alt="cheese">
               </div>
               <div class="goods_intro_context">
                 <h3>
@@ -184,7 +184,7 @@
             <div class="goods_desc">
               <div class="context">
                 <div class="pic">
-                  <img src="cheese3.png" alt="cheese">
+                  <img src="images/cheese3.png" alt="cheese">
                 </div>
                 <p class="words">
                   <strong class="sub_tit">우유의 꽃, 모짜렐라</strong>
@@ -208,7 +208,7 @@
               </div>
               <div class="context">
                 <div class="pic">
-                  <img src="cheese4.png" alt="cheese">
+                  <img src="images/cheese4.png" alt="cheese">
                 </div>
                 <p class="words">
                   <strong class="sub_tit">푸글리제 모짜렐라 (Fresh Cheese / 125g)</strong>
@@ -232,7 +232,7 @@
               <div class="tip_box">
                 <div class="context">
                   <div class="pic">
-                    <img src="kurly_tip.png" alt="kurly_tip">
+                    <img src="images/kurly_tip.png" alt="kurly_tip">
                   </div>
                 </div>
               </div>
