--- a/team4_project/src/main/webapp/resources/product_review.html
+++ b/team4_project/src/main/webapp/resources/product_review.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="dest/css/styles.css" />
+    <link rel="stylesheet" href="resources/css/styles.css" />
     <title>Document</title>
   </head>
   <body>
